- resumeCheckpoint的时候，如果uploadPart的状态是0，也尝试获取数据并重传，如果没有get到数据，则修改状态为2 - 增加uploadBuffer接口

--- a/example/src/templates/index.html
+++ b/example/src/templates/index.html
@@ -13,5 +13,6 @@
     </div>
     <button id="btn" type="submit">start record</button>
     <button id="btn2" type="submit">stop record</button>
+    <button id="btn3" type="submit">upload buffer</button>
 </body>
 </html>
